get student list of schedule
